--- a/SmartGameAgent/src/styles.css
+++ b/SmartGameAgent/src/styles.css
@@ -1,6 +1,15 @@
 .logo.vanilla:hover {
   filter: drop-shadow(0 0 2em #ffe21c);
 }
+.settings-link {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 24px; /* Ajusta o tamanho do ícone */
+  text-decoration: none;
+  color: inherit;
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -44,12 +53,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffffff;
   text-decoration: inherit;
 }
 
 a:hover {
-  color: #535bf2;
+  color: #ffffff;
 }
 
 h1 {
@@ -75,10 +84,10 @@ button {
 }
 
 button:hover {
-  border-color: #396cd8;
+  border-color: rgb(255, 255, 255);
 }
 button:active {
-  border-color: #396cd8;
+  border-color: #ffffff;
   background-color: #e8e8e8;
 }
 
@@ -98,7 +107,7 @@ button {
   }
 
   a:hover {
-    color: #24c8db;
+    color: #000000;
   }
 
   input,
